--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILYVphlV3ZxL3pY8/2OPq4WWiB/ieK719iAYZnefize8
 
       <div class="actions">
         <button id="copyBtn" class="btn ghost" type="button">📋 Copy Key</button>
-        <a id="downloadLink" class="btn primary" href="id_rsa.pub" download>⬇️ Download .pub</a>
+        <a id="downloadLink" class="btn primary" href="sreejuzzz.pub" download>⬇️ Download .pub</a>
         <a class="btn outline" href="https://sreejithmsreenivas.com" target="_blank" rel="noopener">🌐 Portfolio</a>
       </div>
     </section>
